<resources>
    <string name="app_name">Jalwa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="share">Share</string>
    <string name="select_size">Select Size</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="quantity">01</string>
    <string name="product_description">Product Description</string>
    <string name="description_detail">Thes ear rings are fashioned in a romaticstyle with a\the gold findish that will keep your beauty alive, crafted with love</string>
    <string name="add_to_cart">add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="rs_1150">Rs. 1150</string>
    <string name="small">small</string>
    <string name="login_signup">Login/Signup</string>
    <string name="pk_92">PK +92</string>
    <string name="proceed">Proceed</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="verify_account">Verify Account</string>
    <string name="resend_code_60s">Resend Code : 60s</string>
    <string name="enter_pin_code_sent_to_92xxxxxxxxxx">Enter PIN code sent to +92XXXXXXXXXX</string>
    <string name="searching_relevant_videos_for_you"><b>Searching Relevant Videos For You</b></string>
</resources>