<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/enterNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:textSize="15dp"
        android:textColor="@color/dark_grey"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintLeft_toLeftOf="@id/backButton" />

    <TextView
        android:id="@+id/countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pk_92"
        android:textColor="@color/grey"
        android:layout_marginTop="10dp"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/enterNumberText"
        app:layout_constraintLeft_toLeftOf="@+id/backButton" />

    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/enterNumberText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/countryCode" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/darkest_grey"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We will use your phone number to verify you"
        android:textColor="@color/grey"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="@id/backButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:letterSpacing="0.12"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_background_blue_round"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>