<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="time"
            type="String" />

        <variable
            name="phoneNumber"
            type="String" />

        <variable
            name="verifyCodeViewCallbacks"
            type="com.example.jalwa.ui.main.view.VerifyCodeView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:backgroundTint="@color/primary_text_color"
            android:onClick="@{() -> verifyCodeViewCallbacks.backButtonClick()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/verify_account"
            android:textColor="@color/primary_text_color"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterPinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@{String.format(@string/enter_pin_code_sent_to_num, phoneNumber)}"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/backButton"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <EditText
            android:id="@+id/firstDigit"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_background_only_border_dark_grey_round"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/secondDigit"
            app:layout_constraintTop_toBottomOf="@id/enterPinText"
            tools:text="1" />

        <EditText
            android:id="@+id/secondDigit"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_background_only_border_dark_grey_round"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/firstDigit"
            app:layout_constraintRight_toLeftOf="@id/thirdDigit"
            app:layout_constraintTop_toBottomOf="@id/enterPinText"
            tools:text="2" />

        <EditText
            android:id="@+id/thirdDigit"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_background_only_border_dark_grey_round"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/secondDigit"
            app:layout_constraintRight_toLeftOf="@id/fourthDigit"
            app:layout_constraintTop_toBottomOf="@id/enterPinText"
            tools:text="3" />

        <EditText
            android:id="@+id/fourthDigit"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_background_only_border_dark_grey_round"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/thirdDigit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterPinText"
            tools:text="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{time}"
            android:textColor="@color/tertiary_text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstDigit"
            tools:text="@string/resend_code_60s" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/ic_background_blue_round"
            android:fitsSystemWindows="true"
            android:letterSpacing="0.12"
            android:onClick="@{() -> verifyCodeViewCallbacks.proceedButtonClick()}"
            android:text="@string/proceed"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>