<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="price"
            type="String" />

        <variable
            name="body"
            type="String" />

        <variable
            name="photoUrl"
            type="String" />

        <variable
            name="buyQuantity"
            type="String" />

        <variable
            name="variant1"
            type="String" />

        <variable
            name="variant2"
            type="String" />

        <variable
            name="productDetailBottomSheetCallBacks"
            type="com.example.jalwa.ui.main.view.ProductDetailBottomSheet" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/header"
                layout="@layout/header_product_detail_bottom_sheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:photoUrl="@{photoUrl}"
                bind:price="@{price}"
                bind:title="@{title}" />

            <TextView
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@{variant1}"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="@string/select_size" />


            <com.example.jalwa.ui.main.view.AutoFillRecyclerView
                android:id="@+id/options1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:columnWidth="100dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option1" />

            <TextView
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@{variant2}"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options1"
                tools:text="@string/select_size" />

            <com.example.jalwa.ui.main.view.AutoFillRecyclerView
                android:id="@+id/options2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:columnWidth="100dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option2" />

            <TextView
                android:id="@+id/selectQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/select_quantity"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_baseline_indeterminate_check_box_24"
                android:onClick="@{() -> productDetailBottomSheetCallBacks.decreaseQuantity()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectQuantity" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:text="@{buyQuantity}"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/minus"
                app:layout_constraintTop_toBottomOf="@id/selectQuantity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_sharp_add_box_24"
                android:onClick="@{() -> productDetailBottomSheetCallBacks.increaseQuantity()}"
                app:layout_constraintStart_toEndOf="@id/quantity"
                app:layout_constraintTop_toBottomOf="@id/selectQuantity" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantity" />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/product_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <TextView
                android:id="@+id/descriptionDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.3"
                android:paddingHorizontal="15dp"
                android:text="@{body}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                tools:text="@string/description_detail" />

            <View
                android:id="@+id/shadowLine"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_background_white_with_top_shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionDetail" />

            <include
                layout="@layout/footer_product_detail_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shadowLine"
                bind:productDetailBottomSheetCallBacks="@{productDetailBottomSheetCallBacks}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>